--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
       </a>
     </p>
     <div class="page-count" id="pageCount">Page views: ...</div>
+    <meta name="google-site-verification" content="chpNK1lT3suVsdu36wF5dZRMK4h16DtvxCJwD8wEXXw" />
   </header>
 
   <section class="boxed-section">
